see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

26-Dec-2010 Jean-Marie Simonet
 # [#23977] Weblink: modal and popup target window patch
 #$ [#23988] Updating/installing Joomla core through Manager does not display XML description
 # [#23990] mod_articles_category some header tag's are not closed properly. Thanks Bill.
 # [#23944] Accessibility fix for Toolbar. Thanks Andrea
 # [#23943] Accessibility fix for Modals. Thanks Andrea

25-Dec-2010 Jean-Marie Simonet
 # [#23970] language string missing COM_BANNERS_FIELD_VALUE_0. Thanks Bill.
 $ [#23927] Bad Translation
 
25-Dec-2010 Mark Dexter
 # [#23886] Escape Module Class Suffix for all Modules (Rouven Weßling)
 # [#23773] Category not found notice
 # [#23967] Parameter $default is useless in JRegistry::exists
 # [#23966] Beez5 unused strings (Edgars Piruška)
 # [#23965] Change Database Default to MSQLi instead of MSQL
 # [#23727] Use mootools in md_stylechanger.js (Rouven Weßling)
 # [#23733] Improve hide.js (Rouven Weßling)
 # [#23336] JUser->authorise() improvement (Dennis Hermatski)

24-Dec-2010 Christophe Demko
 # [#23857] thrice Recipient!!
 # [#23956] Beez20 string name issues (bill richardson, Edgars Piruška)
 # [#23923] PHP Strict validation in session classes (Rune Sjøen)
 # [#23789] Typo in sample data (Ramindu Deshapriya)
 # [#23784] Template editor background missing with bluestork (bill richardson,	Ramindu Deshapriya)
 # [#23830] ACL is warned but bypassed for change state, archive and trash (bill richardson, Mark Dexter)

24-Dec-2010 Jean-Marie Simonet
 # [#23868] FTP not implemented for template source edit
 +$ [#23926] Missing help screen reference