@@ -45,6 +45,9 @@ $app	= JFactory::getApplication();
 <?php  endif; ?>
 
 <!-- Load additional CSS styles for Internet Explorer -->
+<!--[if IE 8]>
+	<link href="templates/<?php echo  $this->template ?>/css/ie8.css" rel="stylesheet" type="text/css" />
+<![endif]-->
 <!--[if IE 7]>
 	<link href="templates/<?php echo  $this->template ?>/css/ie7.css" rel="stylesheet" type="text/css" />
 <![endif]-->
