@@ -1,0 +1,22 @@
+@charset "UTF-8";
+
+/**
+ * @version		$Id: ie8.css 16708 2010-05-03 20:00:47Z eddieajau $
+ * @package		Joomla.Administrator
+ * @subpackage	templates.hathor
+ * @copyright	Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ * @since		1.6
+ *
+ * CSS file for IE8
+ */
+
+/**
+ * Special Styles for Internet Explorer 8
+ */
+
+/* Accessibility: css in template.css for slider keyboard
+ * has to be reversed here or the mouse does not work for ie */
+.pane-toggler + div.pane-slider {
+	display: block;
+}
